gcp-c1/argocd/expose/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: fredlab-argocd-ip
    networking.gke.io/managed-certificates: fredlab-argocd-cert
spec:
  rules:
    - host: argocd.playground.fredlab.dev
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
